--- a/calculadoradefracoes.htm
+++ b/calculadoradefracoes.htm
@@ -4,7 +4,7 @@
 <!-- cole dentro de HEAD -->
 
 <HEAD>
-<h1 align="center"><font face="verdana" color="0002f4">Calcule uma fração</font></h1>
+<h1 align="center"><font face="verdana" color="0002f4">Calcule uma fraï¿½ï¿½o</font></h1>
 <script type="text/javascript">
 
 var n1, n2, d1, d2, An, Ad, Op;
@@ -137,7 +137,7 @@ function display(){
 <table width="200" align="center" border="0" cellspacing="0" cellpadding="4" style="background-color:#ffffff;border:1px #000000 solid;">
   <tr>
     <td align="center" valign="middle">
-      <h3>Calculadora de Frações</h3>
+      <h3>Calculadora de Fraï¿½ï¿½es</h3>
       <form name="calc">
         <table width="150" border="0" cellspacing="0" cellpadding="0">
           <tr>
@@ -147,7 +147,7 @@ function display(){
               <option value="+">+</option>
               <option value="-">-</option>
               <option value="*">x</option>
-              <option value="/">÷</option>
+              <option value="/">ï¿½</option>
               </select>
             </td>
             <td style="border-bottom:2px #000000 solid;"><input type="text" size="2" name="n2" id="n2" tabindex="4"></td>
@@ -165,6 +165,6 @@ function display(){
     </td>
   </tr>
 </table>
-<br><pre><a href="teste1.html"><font color="ffffff">    <img src="botão de voltar.jpg" width="80px" height="40px"></a></pre>
+<br><pre><a href="index.html"><font color="ffffff">    <img src="botï¿½o de voltar.jpg" width="80px" height="40px"></a></pre>
 </BODY>
 </html>
