--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ body{
 <ul>
 	<li>
 		<input type="radio" name="tabs" class="rd_tabs" id="tab1" checked>
-		<label for ="tab1">Operações e Razões Trig.</label>
+		<label for ="tab1">Calculadora das 4 Operações</label>
 		<div class="content">
-			<article align="center"><font color="#000000"><br>Calculadora de operações básicas e cálculo de razões trigonométricas (Seno, Cosseno e Tangente).</font></article><br><article align="center"><img src="tabelasencostan.png" width="300px" height="250px"></article><article align="center"><br><br><a href="operacoes.html"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
+			<article align="center"><font color="#000000"><br>Calculadora de operações básicas fácil e usar, a base das outras.</font></article><br><article align="center"><img src="tabelasencostan.jpg" width="400px" height="250px"></article><article align="center"><br><br><a href="./blackCalculator/example/teste1.html"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
 			</article>
 			
 		</div>
@@ -119,6 +119,6 @@ body{
 		</div>
 	</li>
 </ul>
-	</nav>	
+</nav>	
 </body>
 </html>
