--- a/imc.htm
+++ b/imc.htm
@@ -140,6 +140,6 @@ Coloque sua Altura em m.(Ex.: 1.62):<br><input type="text" name="altura" value="
 <font color="0002f4">Não utilize vírgulas, apenas pontos.</font>
 </li>
 </ul>
-<br><pre><a href="teste1.html"><font color="ffffff">    <img src="botão de voltar.jpg" width="100px" height="50px"></a></pre>
+<br><pre><a href="index.html"><font color="ffffff">    <img src="botão de voltar.jpg" width="100px" height="50px"></a></pre>
 </BODY>
-<html>
+<html>>
