--- a/equacao2grau.htm
+++ b/equacao2grau.htm
@@ -196,6 +196,6 @@
   <button name="Calcular" onclick="Calcula()"><font face="verdana">Calcular</font></button>
   <font face="verdana">&nbsp;<input type="reset" value="Limpar" name="Limpar" style="font-family: verdana"></font></p>
 </form>
-<br><pre><a href="index.html"><font color="ffffff">    <img src="botão de voltar.jpg" width="80px" height="40px"></a></pre>
+<br><pre><a href="teste1.html"><font color="ffffff">    <img src="botão de voltar.jpg" width="80px" height="40px"></a></pre>
 </body>
-</html>>
+</html>
