--- a/conversor.html
+++ b/conversor.html
@@ -15,7 +15,10 @@ temperatura= 3  #ok
 numeração  = 3+ #+-ok-->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>Coversor de Unidades</title>
+<title>
+Coversor de Unidades
+<meta charset="UTF-8">
+</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="José Roberto">
