--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Calculadora Simplificada</title>
+<title>Calculadora Simplificada
+<meta charset="UTF-8">
+</title>
 <br><h1 align="center"><font color="000ade"><u>Opções de Calculadoras</u></h1>
 <style>
 	
