--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body{
 		<input type="radio" name="tabs" class="rd_tabs" id="tab3">
 		<label for ="tab3">Cálculo de Eq. de 2° Grau</label>
 		<div class="content">
-		<article align="center"><font color="#000000"><br>Calculadora de equações do 2° grau com passo a passo da resolução.</font></article><br><article align="center"><img src="formulasequacao.jpg" width="350px" height="200px"></article><article align="center"><br><br><a href="equacao2grau.htm"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
+		<article align="center"><font color="#000000"><br>Calculadora de equações do 2° grau com passo a passo da resolução.</font></article><br><article align="center"><img src="formulasequacao.jpg" width="350px" height="200px"></article><article align="center"><br><br><a href="equacao2grau.html"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
 			</article>
 		</div>
 	</li>
