without L in HTML

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body{
 		<input type="radio" name="tabs" class="rd_tabs" id="tab2">
 		<label for ="tab2">Cálculo do Índice de Massa</label>
 		<div class="content">
-			<article align="center"><font color="#000000"><br>Calculadora do IMC (Índice de Massa Corporal) com diagnóstico incluso.</font></article><br><article align="center"><img src="tabelaimc.png" width="400px" height="250px"></article><article align="center"><br><br><a href="imc.htm"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
+			<article align="center"><font color="#000000"><br>Calculadora do IMC (Índice de Massa Corporal) com diagnóstico incluso.</font></article><br><article align="center"><img src="tabelaimc.png" width="400px" height="250px"></article><article align="center"><br><br><a href="imc.html"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
 			</article>
 		</div>
 	</li>
@@ -116,7 +116,7 @@ body{
 		<input type="radio" name="tabs" class="rd_tabs" id="tab5">
 		<label for ="tab5">Calculadora de Frações Simples</label>
 		<div class="content">
-			<article align="center"><font color="#000000"><br>Calculadora de operações envolvendo frações.</font></article><br><article align="center"><img src="fracoes.png" width="300px" height="200px"></article><article align="center"><br><br><a href="calculadoradefracoes.htm"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
+			<article align="center"><font color="#000000"><br>Calculadora de operações envolvendo frações.</font></article><br><article align="center"><img src="fracoes.png" width="300px" height="200px"></article><article align="center"><br><br><a href="calculadoradefracoes.html"><img src="botão de acesso.jpg" width="100px" height="50px"></a>
 			</article>
 		</div>
 	</li>
