--- a/imc.html
+++ b/imc.html
@@ -138,6 +138,7 @@ Coloque sua Altura em m.(Ex.: 1.62):<br><input type="text" name="altura" value="
 <br>
 <ul>
 <li>
+<meta charset="UTF-8">
 <font color="0002f4">Não utilize vírgulas, apenas pontos.</font>
 </li>
 </ul>
